# feat

./: Cargo.toml
src/: arch.rs  cmp.rs  core_arch.rs  lib.rs  macros.rs  muck.rs  sealed.rs  simd.rs  ty.rs  types.rs  util.rs
src/arch/: x86_64.rs
src/arch/x86_64/: aes.rs  sha.rs  sse.rs
src/core_arch/: x86.rs
src/core_arch/x86/: float.rs  sse.rs
src/muck/: contiguous.rs  forget.rs  no_uninit.rs  sealed.rs  zeroable.rs
src/simd/: lane.rs  mask.rs
src/ty/: mask.rs  vec.rs
src/types/: u8.rs  vector.rs
src/types/vector/: f32.rs  f64.rs  i16.rs  i32.rs  i64.rs  i8.rs  u16.rs  u32.rs  u64.rs  u8.rs
