[package]
name = "feat"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[package.metadata.docs.rs]
all-features = true

targets = [
  "x86_64-unknown-linux-gnu",
  # "x86_64-pc-windows-msvc",
  "x86_64-pc-windows-gnu",
  "x86_64-apple-darwin",
  
  "i686-unknown-linux-gnu",
  # "i686-pc-windows-msvc",
  "i686-pc-windows-gnu",
  
  "aarch64-unknown-linux-gnu",
  # "aarch64-pc-windows-msvc",
  "aarch64-apple-darwin",
  "aarch64-pc-windows-gnullvm",

  "wasm32-unknown-unknown",

  "riscv64gc-unknown-linux-gnu",
]

cargo-args = ["-Z", "build-std"]

[dependencies]
bytemuck = { version = "1.20", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true }
rand = { version = "0.8", default-features = false, optional = true }
# cfg-if = "1.0.0"

[features]
default = ["std"]
std = ["bytemuck?/extern_crate_std", "serde?/std", "rand?/std"]
